--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
     --title-color: hsl(244, 24%, 26%);
     --text-color: hsl(244, 16%, 43%);
     --body-color: hsl(258, 60%, 98%);
+    --hover-color: hsl(43, 100%, 68%);
     --container-color: #fff;
 
     --body-font: 'Rubik', sans-serif;
