--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -9,12 +9,12 @@
 .intro {
     max-width: 540px;
     text-align: center;
+    z-index: 1;
 }
 
 .home__img {
     margin-bottom: 1.5rem;
     background-size: cover;
-
 }
 
 .home__name {
