--- a/src/components/resume/resume.css
+++ b/src/components/resume/resume.css
@@ -47,6 +47,11 @@
     font-size: var(--small-font-size);
 }
 
+.timeline__gpa {
+    color: #8b88b1;
+    font-size: var(--small-font-size);
+}
+
 .timeline__title {
     font-size: var(--h3-font-size);
     margin: .5rem 0;
