--- a/src/index.css
+++ b/src/index.css
@@ -102,7 +102,7 @@ img {
     padding-bottom: 2rem;
 }
 
-.section_title {
+.section__title {
     font-size: var(--h1-font-size);
     margin-left: 0.875rem;
     font-weight: var(--font-bold);
@@ -110,9 +110,9 @@ img {
     margin-bottom: 3.75rem;
 }
 
-.section_title::before {
+.section__title::before {
     content: '';
-    background: url(./assets/dots-bg.svg);
+    /*background: url(./assets/dots-bg.svg);*/
     height: 2.25rem;
     width: 2.25rem;
     position: absolute;
